--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@
     </div>
 
     <div class="content">
-
+        <div class="title">Some random information</div>
+        <div class="container">
+            <div class="info">
+                <img src="./images/placeholder.jpg" width="200px" height="200px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./images/placeholder.jpg" width="200px" height="200px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./images/placeholder.jpg" width="200px" height="200px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./images/placeholder.jpg" width="200px" height="200px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 
     <div class="quote">
