--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
     </div>
 
     <div class="quote">
-
+        <div class="container">
+            <div class="text">
+                This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. 
+                Who knows? All i know is that it looks nice.
+            </div>
+            <div class="author">
+                -Thor, God of Thunder
+            </div>
+        </div>
     </div>
 
     <div class="call">
