Call to action part is added

--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
         </div>
     </div>
 
-    <div class="call">
-
+    <div class="call-to-action">
+        <div class="info">
+            <div class="title">Call to action! It's time!</div>
+            <div class="description">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="sign-up"> 
+            <button>Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
