--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="footer">
-
+        <div class="text">Copyright © The Odin Project 2024</div>
     </div>
 
 </body>
